# KinectSimpleInterface

./: CMakeLists.txt  FindKinectSDK2.cmake  KinectSimple.cpp  KinectSimple.h  main.cpp
